--- a/src/css/blocks/card-edit.scss
+++ b/src/css/blocks/card-edit.scss
@@ -63,3 +63,85 @@
     height: 200px;
   }
 }
+
+.card-edit__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-edit__delete {
+  background-color: transparent;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 52px;
+  width: 100px;
+  color: rgb(116, 10, 10);
+  border: none;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  cursor: pointer;
+
+  img {
+    position: absolute;
+    top: -55px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    transition: 0.3s all ease-in-out;
+  }
+
+  span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.3s all ease-in-out;
+  }
+
+  &:hover, 
+  &:focus {
+    span {
+      top: 55px;
+    }
+
+    img {
+      top: 0;
+    }
+  }
+}
+
+.card-edit__warning {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: $white;
+  padding: 30px;
+  border: 3px solid $text-color;
+  box-shadow: 3px 3px 5px 3px $background;
+  z-index: 10;
+  border-radius: 10px;
+  animation: shake 0.7s;
+
+  p {
+    width: 100%;
+    font-size: 24px;
+    text-align: center;
+    font-weight: 700;
+  }
+}
+
+.card-edit__confirm {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
