--- a/src/css/global/global-styles.scss
+++ b/src/css/global/global-styles.scss
@@ -67,23 +67,23 @@ body {
 @keyframes shake {
   10%,
   90% {
-    transform: translate(-51%, -50%);
+    transform: translate(-1%, 0);
   }
 
   20%,
   80% {
-    transform: translate(-49%, -50%);
+    transform: translate(1%, 0);
   }
 
   30%,
   50%,
   70% {
-    transform: translate(-52%, -50%);
+    transform: translate(-2%, 0);
   }
 
   40%,
   60% {
-    transform: translate(-48%, -50%);
+    transform: translate(2%, 0);
   }
 }
 
